# nv-authkit

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  test_email_output.html
app/: __init__.py  main.py
app/api/: auth.py  health.py  roles.py  users.py
app/core/: config.py  database.py  exceptions.py  security.py
app/dependencies/: auth.py  rbac.py
app/models/: __init__.py  base.py  role.py  user.py
app/schemas/: auth.py  role.py  user.py
app/services/: auth_service.py  email_service.py  role_service.py  user_service.py
app/templates/email/: account_locked.html  base.html  data_export.html  login_alert.html  newsletter.html  password_changed.html  password_reset.html  role_assigned.html  verification.html  welcome.html
docker/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml
migrations/: env.py
migrations/versions/: 165666c16da1_fix_datetime_columns.py  2db0550b5622_authkit_setup.py
nginx/: nginx.conf
postman/: POSTMAN_TESTING.md  authkit-collection.json  authkit-environment.json  openapi.json  run_postman_tests.sh
scripts/: backup.sh  check_config.py  create_superuser.py  docker-deploy.sh  fix_datetime_issue.py  init_db.py  init_rbac.py  test_email.py
